RANGER-199: Rename misspelled EmbededServer classsname
Signed-off-by: sneethiraj <sneethir@apache.org>